# autoglitch

./: .gitignore  AGENTS.md  AGENTS.strict.md  CLAUDE.md  README.ko.md  README.md  pyproject.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  codeql.yml  semgrep.yml
configs/: default.yaml
configs/hardware_profiles/: chipwhisperer-hardware.yaml  mock-hardware.yaml  serial-command-hardware.yaml  serial-json-hardware.yaml
configs/policy/: default_policy.yaml
configs/targets/: esp32.yaml  nrf52.yaml  stm32f3.yaml
docs/: ARCHITECTURE.md  ARTIFACT_BUNDLE_SCHEMA.md  BENCHMARK_SCHEMA.md  CHIPWHISPERER_ADAPTER_PLAN.md  HARDWARE_BOM.md  HIL_VALIDATION_REPORT_2026Q1.md  PLAN_IMPLEMENTATION_STATUS.md  PLUGIN_SDK.md  REAL_HARDWARE_CHECKLIST.md  RELATED_RESEARCH.md  RESEARCH_POSITIONING.md  ROADMAP.md  RUNBOOK.md  SAFETY.md  SOFTWARE_EVOLUTION_2026.md
experiments/configs/: queue_hil.yaml  repro_esp32.yaml  repro_stm32f3.yaml  soak_hil_esp32.yaml  soak_hil_stm32f3.yaml
paper/: PAPER_SKELETON.md
src/: __init__.py  cli.py  cli_agentic.py  cli_batch.py  cli_commands.py  cli_commands_agentic.py  cli_commands_rl.py  cli_execution.py  cli_hardware.py  cli_parser.py  cli_preflight.py  cli_runtime.py  cli_support.py  cli_validation.py  types.py
src/agentic/: __init__.py  patcher.py  planner.py  policy.py  trace.py
src/classifier/: __init__.py  base.py
src/config/: __init__.py  schema.py  validator.py
src/hardware/: __init__.py  _framework_adapters.py  _framework_capabilities.py  _framework_doctor.py  _framework_locks.py  _framework_models.py  _framework_resolution.py  base.py  chipwhisperer_hardware.py  framework.py  mock.py  serial_async_hardware.py  serial_hardware.py  typed_serial_hardware.py
src/llm_advisor/: __init__.py  advisor.py
src/logging_viz/: __init__.py  logger.py  mlflow_tracker.py
src/mapper/: __init__.py  mapper.py
src/observer/: __init__.py  collector.py
src/optimizer/: __init__.py  base.py  bayesian.py  rl_optimizer.py  sb3_optimizer.py
src/orchestrator/: __init__.py  orchestrator.py
src/plugins/: __init__.py  registry.py
src/runtime/: __init__.py  preflight.py  recovery.py
src/safety/: __init__.py  controller.py
src/tools/: __init__.py  mock_glitch_bridge.py  rpi_glitch_bridge.py
tests/integration/: test_orchestrator_campaign.py  test_orchestrator_recovery.py  test_serial_bridge_emulator.py
tests/unit/: test_agentic_policy.py  test_agentic_trace.py  test_bayesian_optimizer.py  test_campaign_summary_schema.py  test_chipwhisperer_hardware.py  test_cli_advanced_modes.py  test_cli_agentic.py  test_cli_benchmark.py  test_cli_hardware.py  test_cli_helpers.py  test_cli_preflight.py  test_cli_rl_commands.py  test_cli_runtime.py  test_cli_validation.py  test_config_schema.py  test_hardware_framework.py  test_hil_preflight.py  test_mlflow_tracker.py  test_mock_glitch_bridge.py  (+11 more)
(+8 files in other folders)
